--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 env:
   #scripts dir host and docker
-  SCRIPTS_DIR: tests/rest/
+  SCRIPTS_DIR: tests/rest
   DOCKER_SCRIPTS_DIR: /home/dev/scripts
 
   #server on host
