--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 env:
   #scripts dir host and docker
-  SCRIPTS_DIR: tests/rest
+  SCRIPTS_DIR: tests
   DOCKER_SCRIPTS_DIR: /home/dev/scripts
 
   #server on host
@@ -30,7 +30,7 @@ before_script:
   - py.test $SCRIPTS_DIR/render_test.py --cov=entities
 
 script:
-  - python3 -m unittest discover $SCRIPTS_DIR "*_test.py"
+  - python3 -m unittest discover $SCRIPTS_DIR/rest "*_test.py"
   - docker exec estuary-deployer python3 -m unittest discover $DOCKER_SCRIPTS_DIR "render_test.py"
   - docker-compose down -v
 
