--- a/kubedeployment.yml
+++ b/kubedeployment.yml
@@ -24,17 +24,17 @@ spec:
             - mountPath: /home/dev/bin/
               name: flask-volume
           ports:
-            - containerPort: 80
+            - containerPort: 8080
           #      readinessProbe:
           #        httpGet:
           #          path: /
-          #          port: 80
+          #          port: 8080
 
       volumes:
         - name: flask-volume
           hostPath:
             #modify your path here!!!
-            path: "/C/Users/IdeaProjects/test-analyzer"
+            path: "C:\Users\IdeaProjects\estuary-deployer-service"
             type: Directory
 
 
