--- a/kubeservice.yml
+++ b/kubeservice.yml
@@ -3,12 +3,12 @@ apiVersion: v1
 metadata:
   labels:
     k8s-app: estuary-deployer
-  name: estuary-deployer-service
+  name: estuary-deployer
   namespace: default
 spec:
   type: NodePort
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 8080
+      targetPort: 8080
   selector:
     k8s-app: estuary-deployer
