--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 #    entrypoint: tail -f /etc/alpine-release
     environment:
       limit: 'sky' #example env var inserted. you can read it with environ('limit')
-      MAX_DEPLOY_MEMORY: 80 #% from total. tune this parameter after you measure how much a docker compose env consumes. E.g. 16 GB memory => docker will use up to ~13GB.)
+      MAX_DEPLOY_MEMORY: 80 #% from total. tune this parameter after you measure how much a docker compose env consumes. E.g. 16 GB memory => docker will still compose new env if less than ~13.)
     volumes:
       - ./inputs/templates:/data
       - ./inputs/variables:/variables
