--- a/inputs/variables/variables.yml
+++ b/inputs/variables/variables.yml
@@ -2,7 +2,7 @@ databases:
   mysql56:
     container_name: mysql
     restart: always
-    image: mysql:latest
+    image: mysql:5.6
     environment:
       MYSQL_ROOT_PASSWORD: 'root'
       MYSQL_DATABASE: 'store'
