Unique id for service name registered in eureka (#9)
* added id to be appended.
this will help mapping the deployer to be mapped with VM having different resources in terms of RAM, HDD, CPU

* corrected

* changed to token hex and not timestamp

* corrected test

* added new endpoint getactivedeployments
added new deployment limit MAX_DEPLOYMENTS

* increased max deployments to 5

* added setUp method

* corrected bug in case of jinja2 render exception.

* only dirs

* added new tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,16 @@ env:
   TEMPLATES_DIR: inputs/templates
   VARS_DIR: inputs/variables
 
+  #deployment
+  MAX_DEPLOY_MEMORY: 80
+  MAX_DEPLOYMENTS: 3
+
 before_install:
   - docker build -t dinutac/estuary-deployer:latest .
   # start app before running functional rest API tests
   - docker run -d
-    -e MAX_DEPLOY_MEMORY=80
+    -e MAX_DEPLOY_MEMORY=$MAX_DEPLOY_MEMORY
+    -e MAX_DEPLOYMENTS=$MAX_DEPLOYMENTS
     -p 8080:8080
     -v $PWD/inputs/templates:/data
     -v $PWD/inputs/variables:/variables
