--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,13 @@ env:
   MAX_DEPLOY_MEMORY: 80
   MAX_DEPLOYMENTS: 3
 
+  NGROK_TOKEN: 1RER6BUC3QNNwYWY5LcIBjrv3A8_24QccmopTEQJGMErG9uzw
+
 before_install:
   - docker pull alpine:3.9.4
   - docker pull mysql:5.6
   - docker pull dinutac/estuary-testrunner:latest
+  - chmod +x ngrok.sh
   - docker build -t dinutac/estuary-deployer:latest .
 
 install:
@@ -39,6 +42,15 @@ script:
   #run functional testrunner integration API tests
   - docker network create estuarydeployer_default
   - docker run -d
+    -p 8081:8080 netflixoss/eureka:1.3.1
+  - IP_ADDR_STRING=$(hostname -I)
+  - IP_ADDR_ARRAY=($IP_ADDR_STRING)
+  - echo "EUREKA_SERVER=http://${IP_ADDR_ARRAY[0]}:8081/eureka/v2" >> .env
+  - echo "APP_IP_PORT=${IP_ADDR_ARRAY[0]}:8080" >> .env
+  - cat .env
+  - chmod +x wait-for-it.sh
+  - ./wait-for-it.sh -t 20 "http://${IP_ADDR_ARRAY[0]}:8081/eureka/v2" -- echo "eureka running" && sleep 30
+  - docker run -d
     -e MAX_DEPLOY_MEMORY=80
     -p 8080:8080
     -v $PWD/inputs/templates:/data
@@ -46,18 +58,23 @@ script:
     -v /var/run/docker.sock:/var/run/docker.sock
     --net=estuarydeployer_default
     --name estuary-deployer
+    --env-file .env
     dinutac/estuary-deployer:latest
-#  - docker logs -f estuary-deployer &
+
+  #  - docker network ls
+  #  - echo "Deployer net is $(docker network ls | grep deployer | awk '{print $2}' | head -1)"
   - sleep 10
-#  - docker network ls
-#  - echo "Deployer net is $(docker network ls | grep deployer | awk '{print $2}' | head -1)"
+  - docker ps -a
   - python3 -m unittest discover $SCRIPTS_DIR/rest_testrunner_integration "*_test.py"
-  - docker ps
+  - docker ps -a
+  #  - ./ngrok.sh
+  #  - docker logs -f estuary-deployer
+  #  - docker logs $(docker ps -a | grep testrunner | awk '{print $13}')
   - docker stop $(docker ps -a -q)
   - docker rm $(docker ps -a -q)
   - docker network prune -f
 
-    #run unit tests on travis vm and on docker
+  #run unit tests on travis vm and on docker
   - docker network create estuarydeployer_default
   - docker run -d
     -e MAX_DEPLOY_MEMORY=$MAX_DEPLOY_MEMORY
@@ -73,6 +90,7 @@ script:
   - python3 -m unittest discover $SCRIPTS_DIR "render_test.py"
   - python3 -m unittest discover $SCRIPTS_DIR/rest "*_test.py"
   - docker exec estuary-deployer python3 -m unittest discover $DOCKER_SCRIPTS_DIR "render_test.py"
+  #  - docker logs estuary-deployer
   - docker stop $(docker ps -a -q)
   - docker rm $(docker ps -a -q)
   - docker network prune -f
@@ -95,7 +113,7 @@ script:
 
   #run eureka registration tests
   - docker-compose up -d
-  - sleep 20
+  - sleep 45
   - docker ps
   - docker exec estuary-deployer python3 -m unittest discover $DOCKER_SCRIPTS_DIR/tests/rest_eureka "*_test.py"
   - docker-compose down -v
