--- a/rest/api/views/static/kubectl.yml
+++ b/rest/api/views/static/kubectl.yml
@@ -205,20 +205,20 @@ paths:
           description: deploy success
         404:
           description: deploy failure
-  /deploystatus/{compose_id}:
+  /deploystatus/{deployment_name}:
     get:
       tags:
         - estuary-deployer
-      summary: gets the running containers for a specific kubernetes environment after it was deployed
+      summary: gets the deployment status for a specific kubernetes deployment
       consumes:
         - application/json
         - application/x-www-form-urlencoded
       produces:
         - application/json
       parameters:
-        - name: compose_id
+        - name: deployment_name
           in: path
-          description: kubernetes environment id returned by the deploystart action.
+          description: kubernetes deployment id returned by the deploystart action.
           required: true
           type: string
       responses:
@@ -238,20 +238,20 @@ paths:
           description: get active deployments success.
         404:
           description: get active deployments failure
-  /deploylogs/{compose_id}:
+  /deploylogs/{deployment_name}:
     get:
       tags:
         - estuary-deployer
-      summary: gets the logs of each running container specified by compose id identifier.
+      summary: gets the logs for the kubernetes deployment specified by deployment_name
       consumes:
         - application/json
         - application/x-www-form-urlencoded
       produces:
         - application/json
       parameters:
-        - name: compose_id
+        - name: deployment_name
           in: path
-          description: kubernetes environment id returned by the deploystart action.
+          description: kubernetes deployment id returned by the deploystart action.
           required: true
           type: string
       responses:
@@ -259,84 +259,20 @@ paths:
           description: get compose environment logs success
         404:
           description: get compose environment logs failure
-  /getcontainerfile/{compose_id}/{container_service_name}:
-    post:
-      tags:
-        - estuary-deployer
-      summary: gets a file from the kubernetes environment. Useful to get the test results file
-      consumes:
-        - application/json
-        - application/x-www-form-urlencoded
-      produces:
-        - application/json
-      parameters:
-        - name: compose_id
-          in: path
-          description: kubernetes environment id returned by the deploystart action.
-          required: true
-          type: string
-        - name: container_service_name
-          in: path
-          description: target container to get file from
-          required: true
-          type: string
-        - name: file
-          in: body
-          description: target container file path to get
-          required: false
-          schema:
-            $ref: '#/definitions/file'
-      responses:
-        200:
-          description: The content of the file in plain text
-        404:
-          description: The file content could not be read
-  /getcontainerfolder/{compose_id}/{container_service_name}:
-    post:
-      tags:
-        - estuary-deployer
-      summary: gets a folder as zip from the kubernetes environment. Useful to get the test results folder
-      consumes:
-        - application/json
-        - application/x-www-form-urlencoded
-      produces:
-        - application/zip
-      parameters:
-        - name: compose_id
-          in: path
-          description: kubernetes environment id returned by the deploystart action.
-          required: true
-          type: string
-        - name: container_service_name
-          in: path
-          description: target container to get folder from
-          required: true
-          type: string
-        - name: file
-          in: body
-          description: target container folder path to get
-          required: false
-          schema:
-            $ref: '#/definitions/folder'
-      responses:
-        200:
-          description: The content of the folder found on the target container as zip archive
-        404:
-          description: The content of the folder found on the target container could not be obtained
-  /deploystop/{compose_id}:
+  /deploystop/{deployment_name}:
     get:
       tags:
         - estuary-deployer
-      summary: stops the running containers for a specific kubernetes environment after it was deployed
+      summary: stops the kubernetes deployment after it was deployed with name deployment_name
       consumes:
         - application/json
         - application/x-www-form-urlencoded
       produces:
         - application/json
       parameters:
-        - name: compose_id
+        - name: deployment_name
           in: path
-          description: kubernetes environment id returned by the deploystart action.
+          description: kubernetes deployment id returned by the deploystart action.
           required: true
           type: string
       responses:
@@ -370,24 +306,47 @@ paths:
     post:
       tags:
         - estuary-deployer
-      summary: Uploads a file
+      summary: Uploads a file no mater the format. Binary or raw
       consumes:
         - application/json
         - application/x-www-form-urlencoded
       produces:
         - application/json
       parameters:
-        - name: file
+        - name: content
           in: body
-          description: Target file path and file content
-          required: false
+          description: The content of the file
+          required: true
           schema:
-            $ref: '#/definitions/file_upload'
+            $ref: '#/definitions/filecontent'
+        - in: header
+          name: File-Path
+          type: string
+          required: true
       responses:
         200:
           description: The content of the file was uploaded successfully
         404:
           description: Failure, the file content could not be uploaded
+  /executecommand:
+    post:
+      tags:
+        - estuary-deployer
+      summary: Executes a command in blocking mode. If your command is not executing in less than few seconds, the api will timeout.
+      produces:
+        - application/json
+      parameters:
+        - name: command
+          in: body
+          description: The command to be executed on remote service.
+          required: true
+          schema:
+            $ref: '#/definitions/command'
+      responses:
+        200:
+          description: command execution success
+        404:
+          description: command execution failure
 definitions:
     file:
       type: object
@@ -403,18 +362,16 @@ definitions:
           type: "string"
       example: |
            {"folder":"/tmp"}
-    file_upload:
-      type: object
-      properties:
-        file:
-          type: "string"
-        content:
-          type: "string"
-      example: {"file": "/tmp/config.properties", "content": "ip=10.0.0.1\nrequest_sec=100\nthreads=10\ntype=dual"}
+    command:
+      type: string
+      example: ls -lrt
     envvar:
       type: object
       example: |
           {"DATABASE" : "mysql56", "IMAGE":"latest"}
+    filecontent:
+      type: object
+      example: {"file": "/home/automation/config.properties", "content": "ip=10.0.0.1\nrequest_sec=100\nthreads=10\ntype=dual"}
     template:
       type: string
       minLength: 3
