--- a/rest/api/views/static/docker.yml
+++ b/rest/api/views/static/docker.yml
@@ -280,12 +280,41 @@ paths:
           description: target container to get file from
           required: true
           type: string
-        - name: file
-          in: body
+        - name: File-Path
+          type: string
+          in: header
           description: target container file path to get
-          required: false
-          schema:
-            $ref: '#/definitions/file'
+          required: true
+      responses:
+        200:
+          description: The content of the file in plain text
+        404:
+          description: The file content could not be read
+    get:
+      tags:
+        - estuary-deployer
+      summary: gets a file from the docker-compose environment. Useful to get the test results file
+      consumes:
+        - application/json
+        - application/x-www-form-urlencoded
+      produces:
+        - application/json
+      parameters:
+        - name: compose_id
+          in: path
+          description: docker-compose environment id returned by the deploystart action.
+          required: true
+          type: string
+        - name: container_service_name
+          in: path
+          description: target container to get file from
+          required: true
+          type: string
+        - name: File-Path
+          type: string
+          in: header
+          description: target container file path to get
+          required: true
       responses:
         200:
           description: The content of the file in plain text
@@ -312,12 +341,41 @@ paths:
           description: target container to get folder from
           required: true
           type: string
-        - name: file
-          in: body
+        - name: Folder-Path
+          type: string
+          in: header
           description: target container folder path to get
-          required: false
-          schema:
-            $ref: '#/definitions/folder'
+          required: true
+      responses:
+        200:
+          description: The content of the folder found on the target container as zip archive
+        404:
+          description: The content of the folder found on the target container could not be obtained
+    get:
+      tags:
+        - estuary-deployer
+      summary: gets a folder as zip from the docker-compose environment. Useful to get the test results folder
+      consumes:
+        - application/json
+        - application/x-www-form-urlencoded
+      produces:
+        - application/zip
+      parameters:
+        - name: compose_id
+          in: path
+          description: docker-compose environment id returned by the deploystart action.
+          required: true
+          type: string
+        - name: container_service_name
+          in: path
+          description: target container to get folder from
+          required: true
+          type: string
+        - name: Folder-Path
+          type: string
+          in: header
+          description: target container folder path to get
+          required: true
       responses:
         200:
           description: The content of the folder found on the target container as zip archive
@@ -344,7 +402,7 @@ paths:
           description: deploy stop success
         404:
           description: deploy stop failure
-  /getdeployerfile:
+  /getfile:
     post:
       tags:
         - estuary-deployer
@@ -355,12 +413,31 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: file
-          in: body
+        - name: File-Path
+          type: string
+          in: header
           description: File path on the disk
-          required: false
-          schema:
-            $ref: '#/definitions/file'
+          required: true
+      responses:
+        200:
+          description: get file content success
+        404:
+          description: get file content failure
+    get:
+      tags:
+        - estuary-deployer
+      summary: gets a file content from the estuary-deployer service
+      consumes:
+        - application/json
+        - application/x-www-form-urlencoded
+      produces:
+        - application/json
+      parameters:
+        - name: File-Path
+          type: string
+          in: header
+          description: File path on the disk
+          required: true
       responses:
         200:
           description: get file content success
@@ -473,20 +550,6 @@ paths:
         404:
           description: command execution failure
 definitions:
-    file:
-      type: object
-      properties:
-        file:
-          type: "string"
-      example: |
-           {"file":"/etc/hostname"}
-    folder:
-      type: object
-      properties:
-        folder:
-          type: "string"
-      example: |
-           {"folder":"/tmp"}
     command:
       type: string
       example: ls -lrt
